--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Color In App</title>
+    <title>ColourIn!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
