--- a/opencv_js/index.html
+++ b/opencv_js/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>ColourIn!</title>
+    <script async src="/assets/opencv.js" onload="console.log('OpenCV loaded')" type="text/javascript"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script async src="/src/opencv.js" onload="console.log('OpenCV loaded')" type="text/javascript"></script>
     <script src="/src/index.jsx" type="module"></script>
   </body>
 </html>
