add changes to readme and add canonical link

--- a/opencv_js/index.html
+++ b/opencv_js/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Generate free colouring pages in just a few minutes, no sign-up required. This app runs completely in your browser so your images do not go anywhere." />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <link rel="canonical" href="https://colourin.app"/>
     <title>ColourIn!</title>
     <script async src="/assets/opencv.js" onload="console.log('OpenCV loaded')" type="text/javascript"></script>
   </head>
