--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Create free printable coloring pages for adults and kids in just a few minutes from any image. No sign-up required. This app runs completely in your browser." />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>ColourIn!</title>
+    <link rel="canonical" href="https://colourin.app" />
+    <title>Create Free Coloring Pages | ColourIn!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <script src="/src/index.jsx" type="module"></script>
+    <script src="/src/index.tsx" type="module"></script>
   </body>
 </html>
