--- a/opencv_js/index.html
+++ b/opencv_js/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Generate free colouring pages in just a few minutes, no sign-up required. This app runs completely in your browser so your images do not go anywhere." />
+    <meta name="description" content="Create free printable coloring pages for adults and kids in just a few minutes from any image. No sign-up required. This app runs completely in your browser." />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <link rel="canonical" href="https://colourin.app"/>
-    <title>ColourIn!</title>
+    <link rel="canonical" href="https://colourin.app" />
+    <title>Create Free Coloring Pages | ColourIn!</title>
     <script async src="/assets/opencv.js" onload="console.log('OpenCV loaded')" type="text/javascript"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="/src/index.jsx" type="module"></script>
+    <script src="/src/index.tsx" type="module"></script>
   </body>
 </html>
